@@ -344,6 +344,17 @@ type: keyword
 Version of the agent used.
 
 
+
+[float]
+=== `transaction.id`
+
+type: keyword
+
+format: url
+
+A UUID4 transaction ID.
+
+
 [[exported-fields-apm-error]]
 == APM Error fields
 
@@ -469,7 +480,7 @@ The additionally logged error message.
 
 type: keyword
 
-A parametrized message. E.g. 'Could not connect to %s'.  The property message is still required, and should be equal to the param_message, but with placeholders replaced.  In some situations the param_message is used to group errors together. 
+A parametrized message. E.g. 'Could not connect to %s'. The property message is still required, and should be equal to the param_message, but with placeholders replaced. In some situations the param_message is used to group errors together.
 
 
 [[exported-fields-apm-sourcemap]]
@@ -589,16 +600,6 @@ The locally unique ID of the parent of the span.
 
 Transaction-specific data for APM
 
-
-
-[float]
-=== `transaction.id`
-
-type: keyword
-
-format: url
-
-A UUID4 transaction ID.
 
 
 [float]
