@@ -104,7 +104,7 @@
 
             - name: param_message
               type: keyword
-              description: > 
-                A parametrized message. E.g. 'Could not connect to %s'. 
-                The property message is still required, and should be equal to the param_message, but with placeholders replaced. 
-                In some situations the param_message is used to group errors together. 
+              description: >
+                A parametrized message. E.g. 'Could not connect to %s'.
+                The property message is still required, and should be equal to the param_message, but with placeholders replaced.
+                In some situations the param_message is used to group errors together.
