@@ -6,19 +6,6 @@
       type: group
       dynamic: false
       fields:
-        - name: id
-          type: keyword
-          description: >
-            A UUID4 transaction ID.
-          format: url
-          label_template: "View Spans"
-          open_link_in_current_tab: true
-          url_template:
-            - min_version: 5.0.0
-              value: "../app/kibana#/dashboard/3e3de700-7de0-11e7-b115-df9c90da2df1?_a=(query:(query_string:(analyze_wildcard:!t,query:'transaction.id:%22{{value}}%22')))"
-            - min_version: 6.0.0-alpha1
-              value: "../app/kibana#/dashboard/3e3de700-7de0-11e7-b115-df9c90da2df1?_a=(query:(language:lucene,query:'transaction.id:{{value}}'))"
-
         - name: name
           type: text
           multi_fields:
